force-app/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>C%26R Lead</fullName>
        <description>Used for C&amp;R Leads - SG form</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Convert to Contact</fullName>
        </values>
        <values>
            <fullName>Meets CIS Criteria</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CIS Accreditation Evaluator</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Convert to Contact</fullName>
        </values>
        <values>
            <fullName>Meets CIS Criteria</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Jumpstart Application</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Convert to Contact</fullName>
        </values>
        <values>
            <fullName>Meets CIS Criteria</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lead process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Deactivated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>London 19</fullName>
        <description>Lead process for LCRF 19 leads</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Convert to Contact</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to accounts for Fast Forms use.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accreditation_Body_Website__c</fullName>
        <label>Accreditation Body Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Additional_Subject_Area__c</fullName>
        <label>Additional Subject Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subject_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Subject_s__c</fullName>
        <label>Additional Subject(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subject</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_line_1__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Address line 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_line_2__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Address line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_line_3__c</fullName>
        <inlineHelpText>Used by eTouches</inlineHelpText>
        <label>Address line 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AdvancEd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AdvancEd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer_Other_interest_in_CIS__c</fullName>
        <description>Used to describe interest in CIS when chosen answer is &apos;Other&apos;</description>
        <label>Answer &apos;Other&apos; interest in CIS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anticipated_Graduates_Current_Year__c</fullName>
        <label>Anticipated Graduates Current Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_Graduates_Next_Year__c</fullName>
        <label>Anticipated Graduates Next Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Areas_of_Interest__c</fullName>
        <label>Areas of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>School Safeguarding &amp; Child Protection</fullName>
                </value>
                <value>
                    <fullName>Student Support: Mental Health &amp; Well-Being</fullName>
                </value>
                <value>
                    <fullName>International Accreditation &amp; Global Recognition</fullName>
                </value>
                <value>
                    <fullName>Data Protection &amp; Cybersecurity</fullName>
                </value>
                <value>
                    <fullName>Research and Trends in International Education</fullName>
                </value>
                <value>
                    <fullName>Global Citizenship &amp; Intercultural Learning</fullName>
                </value>
                <value>
                    <fullName>Assessing Educational Achievement</fullName>
                </value>
                <value>
                    <fullName>University Guidance &amp; Admission</fullName>
                </value>
                <value>
                    <fullName>University Student Mobility &amp; Transition</fullName>
                </value>
                <value>
                    <fullName>Student Recruitment</fullName>
                </value>
                <value>
                    <fullName>Institutional Improvement &amp; Recognition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>British_Schools_Overseas_BSO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>British Schools Overseas (BSO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_ALL_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_ALL_Single_Sex_Institution__c</fullName>
        <label>Single Sex Institution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Male</fullName>
                </value>
                <value>
                    <fullName>All Female</fullName>
                </value>
                <value>
                    <fullName>Coeducational</fullName>
                    <default>true</default>
                    <label>Coeducational</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_ALL_Total_student_enrollment__c</fullName>
        <description>Used for Annual figures</description>
        <label>Total student enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_Category__c</fullName>
        <label>CIS Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accreditation Coordinator</fullName>
                </value>
                <value>
                    <fullName>Billing/Invoice Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_Code_of_Ethics_Reflection__c</fullName>
        <label>CIS Code of Ethics Reflection</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Already_member__c</fullName>
        <description>Used for Fast Forms</description>
        <label>Already member</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_Applicant_extended_info__c</fullName>
        <inlineHelpText>Used for Fast Forms</inlineHelpText>
        <label>Applicant extended info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_HE_Other_Acc_Org__c</fullName>
        <inlineHelpText>Used for Fast Forms.</inlineHelpText>
        <label>Other accreditation org</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIS_HE_Regional_Acc_Org__c</fullName>
        <inlineHelpText>Used for Fast Forms</inlineHelpText>
        <label>Regional Accreditation Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Higher Learning Commission</fullName>
                </value>
                <value>
                    <fullName>Middle States Commission on Higher Education</fullName>
                </value>
                <value>
                    <fullName>New England Commission of Higher Education</fullName>
                </value>
                <value>
                    <fullName>Northwest Accreditation Commission</fullName>
                </value>
                <value>
                    <fullName>Southern Association of Colleges and Schools</fullName>
                </value>
                <value>
                    <fullName>Western Association of Schools and Colleges</fullName>
                </value>
                <value>
                    <fullName>UK Department for Education</fullName>
                </value>
                <value>
                    <fullName>Swiss University Conference (SUK/CUS)</fullName>
                </value>
                <value>
                    <fullName>Nederlands-Vlaamse Accreditatie Organisatie (NVAO)</fullName>
                </value>
                <value>
                    <fullName>Chinese Ministry of Education</fullName>
                </value>
                <value>
                    <fullName>Singaporean Ministry of Education</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Education Bureau</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_Lead_Type__c</fullName>
        <inlineHelpText>used for Fast Forms</inlineHelpText>
        <label>Lead type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Ed</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_RPrimary_Nationality__c</fullName>
        <label>Primary Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RNationality</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_Role__c</fullName>
        <label>CIS Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_Role_ALL</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_Role_old__c</fullName>
        <label>CIS Role old</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIS_HE_Chief Admission Officer</fullName>
                    <label>Chief Admission Officer</label>
                </value>
                <value>
                    <fullName>CIS_HE_International Admission Officer</fullName>
                    <label>International Admission Officer</label>
                </value>
                <value>
                    <fullName>CIS_HE_Financial Aid Contact</fullName>
                    <label>Financial Aid Contact</label>
                </value>
                <value>
                    <fullName>CIS_HE_CIS Primary Contact</fullName>
                    <label>CIS Primary Contact</label>
                </value>
                <value>
                    <fullName>CIS_SSE_Chief Educational Officer/Head of School</fullName>
                    <label>Chief Educational Officer/Head of School</label>
                </value>
                <value>
                    <fullName>CIS_SSE_Accreditation Coordinator</fullName>
                    <label>Accreditation Coordinator</label>
                </value>
                <value>
                    <fullName>CIS_SSE_Billing/Invoice Contact</fullName>
                    <label>Billing/Invoice Contact</label>
                </value>
                <value>
                    <fullName>CIS_SSE_Educator Recruitment Contact</fullName>
                    <label>Educator Recruitment Contact</label>
                </value>
                <value>
                    <fullName>CIS_SSE_Career/University Guidance Counsellor</fullName>
                    <label>Career/University Guidance Counsellor</label>
                </value>
                <value>
                    <fullName>CIS_SSE_ School Board Chair/Chief Governance Officer/Owner</fullName>
                    <label>School Board Chair/Chief Governance Officer/Owner</label>
                </value>
                <value>
                    <fullName>CIS_SSE_School Administration Contact</fullName>
                    <label>School Administration Contact</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_Boarding__c</fullName>
        <label>Boarding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boarding</fullName>
                </value>
                <value>
                    <fullName>Homestay</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_Country_SoP_for_Ministry_of__c</fullName>
        <label>Country, SoP for Ministry of</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Boarding_Early_Childhood__c</fullName>
        <label>Current Boarding Early Childhood</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Boarding_Middle_School__c</fullName>
        <label>Current Boarding Middle School</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Boarding_Primary_Element__c</fullName>
        <label>Current Boarding Primary/Elementary</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Boarding_Senior_High_Sch__c</fullName>
        <label>Current Boarding Senior/High School</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Students_Early_Childhood__c</fullName>
        <label>Current Students Early Childhood</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Students_Middle_School__c</fullName>
        <label>Current Students Middle School</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Students_Primary_Element__c</fullName>
        <label>Current Students Primary/Elementary</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Current_Students_Senior_High_Sch__c</fullName>
        <label>Current Students Senior/High School</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Early_Childhood__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Childhood</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Governance__c</fullName>
        <label>Governance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company School</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Foundation or Association School</fullName>
                </value>
                <value>
                    <fullName>Proprietary School</fullName>
                </value>
                <value>
                    <fullName>State or Government School</fullName>
                </value>
                <value>
                    <fullName>Religious Foundation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_License_Authority_Host_Country__c</fullName>
        <label>License Authority in Host Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Middle_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Middle School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Multiple_Campus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Campus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Oldest_age_for_leaving__c</fullName>
        <label>Oldest age for leaving or graduating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Primary_Elementary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary/Elementary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_School_Group__c</fullName>
        <label>School Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS International Schools, UK</fullName>
                </value>
                <value>
                    <fullName>Brent International Schools, Philippines</fullName>
                </value>
                <value>
                    <fullName>British Schools Foundation</fullName>
                </value>
                <value>
                    <fullName>Chadwick International</fullName>
                </value>
                <value>
                    <fullName>Cognita</fullName>
                </value>
                <value>
                    <fullName>Dulwich College International</fullName>
                </value>
                <value>
                    <fullName>Dwight Schools</fullName>
                </value>
                <value>
                    <fullName>English Modern Schools, Qatar</fullName>
                </value>
                <value>
                    <fullName>English Schools Foundation</fullName>
                </value>
                <value>
                    <fullName>ESOL Education</fullName>
                </value>
                <value>
                    <fullName>FEYZİYE MEKTEPLERİ VAKFI IŞIK</fullName>
                </value>
                <value>
                    <fullName>GEMS, UAE</fullName>
                </value>
                <value>
                    <fullName>Harrow International Schools</fullName>
                </value>
                <value>
                    <fullName>International Schools Group</fullName>
                </value>
                <value>
                    <fullName>Nazarbayev Intellectual Schools</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia Education</fullName>
                </value>
                <value>
                    <fullName>Orbital Education</fullName>
                </value>
                <value>
                    <fullName>Pathways Schools, India</fullName>
                </value>
                <value>
                    <fullName>Qatar Academies</fullName>
                </value>
                <value>
                    <fullName>SEK Schools, Spain</fullName>
                </value>
                <value>
                    <fullName>SEV Schools, Turkey</fullName>
                </value>
                <value>
                    <fullName>Sinav Koleji</fullName>
                </value>
                <value>
                    <fullName>Taaleem Schools</fullName>
                </value>
                <value>
                    <fullName>Tenby Schools, Malaysia</fullName>
                </value>
                <value>
                    <fullName>United World Colleges</fullName>
                </value>
                <value>
                    <fullName>Wellington College China</fullName>
                </value>
                <value>
                    <fullName>Yew Chung Schools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_Senior_High_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Senior/High School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Teaching_language_1__c</fullName>
        <label>Teaching language 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Teaching_language_2__c</fullName>
        <label>Teaching language 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Teaching_language_3__c</fullName>
        <label>Teaching language 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Usage_Language_2__c</fullName>
        <label>Percentage Usage Language 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Usage_Language_3__c</fullName>
        <label>Percentage Usage Language 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Usage_language_1__c</fullName>
        <label>Percentage Usage Language 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Year_founded__c</fullName>
        <label>Year Founded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_youngest_enrollment_age__c</fullName>
        <label>Youngest Enrollment Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COBIS_The_Patron_s_Accreditation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COBIS: The Patron&apos;s Accreditation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV__c</fullName>
        <description>Used fro Survey Gizmo CV upload</description>
        <label>CV</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>C_R_Application_Status__c</fullName>
        <label>C&amp;R Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Invitational</fullName>
                </value>
                <value>
                    <fullName>LCRF 2019</fullName>
                </value>
                <value>
                    <fullName>No-go</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Re-Registering</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_R_Lead_Type__c</fullName>
        <label>C&amp;R Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jumpstart Application</fullName>
                </value>
                <value>
                    <fullName>C&amp;R Lead</fullName>
                </value>
                <value>
                    <fullName>LCRF 2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_R_existing_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C&amp;R existing contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circumstances_Power_to_award_own_degree__c</fullName>
        <label>Circumstances Power to award own degree</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country_of_current_residence__c</fullName>
        <label>Country of current residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_or_province_for_Ministry_of_Educ__c</fullName>
        <label>Country/province for Ministry of Educati</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <description>Submitted in Jumpstart Application</description>
        <label>Cover Letter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Create_affiliation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_School_Name__c</fullName>
        <label>Current School Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_non_CIS_school__c</fullName>
        <label>Current non-CIS school</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Curricula_Experience__c</fullName>
        <label>Curricula Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RCurricula</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Curriculum_Programme_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Curriculum Programme Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Availability__c</fullName>
        <label>Date of Availability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_programmes_in_English__c</fullName>
        <label>Degree programmes in English</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_current_interest_in_CIS__c</fullName>
        <description>Used on C&amp;R Join our Mailing list (C&amp;R Lead) form</description>
        <label>Describe current interest in CIS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actively looking for a position in an international school</fullName>
                </value>
                <value>
                    <fullName>Interested in learning more about CIS</fullName>
                </value>
                <value>
                    <fullName>Researching positions for when I graduate from my degree programme</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Divisional_Experience__c</fullName>
        <label>Divisional Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Early Childhood</fullName>
                </value>
                <value>
                    <fullName>Primary/Elementary</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>Secondary/High School</fullName>
                </value>
                <value>
                    <fullName>University/Post Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Don_t_send_HE_form_2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the lead already is a contact in Salesforce, merge the records and select this checkbox: don&apos;t send form 2.</inlineHelpText>
        <label>Don&apos;t send HE form 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Educator_application_type__c</fullName>
        <label>Educator application type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accreditation Evaluator</fullName>
                </value>
                <value>
                    <fullName>Career and Recruitment Candidate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_update_on_CIS_vacancies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email update on CIS vacancies</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>